Fixed sports slideshow. Only thing left to do is alignment script.

--- a/views/styles/site/container/block.styl
+++ b/views/styles/site/container/block.styl
@@ -20,7 +20,7 @@
         float left
         img
             width 150px
-            margin-right 10px
+            margin-right 5px
 
 .block-thumb .content-container
     padding 5px
